--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site 2B Tancredo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div> aqui vai uma imagem</div>
         <div>
             <ul>
-                <li>Matérias</li>
-                <li>Professores</li>
-                <li>Alunos</li>
+                <li><h1>Matérias</h1></li>
+                <li><h1>Professores</h1></li>
+                <li><h1>Alunos</h1></li>
             </ul>
     </div>
     </header>
